# rusty-hostess

./: .gitattributes  .gitignore  AGENTS.md  README.md
apps/hostess-t-makepad/: Cargo.toml
apps/hostess-t-makepad/fixtures/: telemetry-snapshot.sample.json
apps/hostess-t-makepad/src/: acamera_sys.rs  android_camera_probe.rs  app_horizontal_alignment.rs  app_mesh_replay_runtime.rs  app_projection_target.rs  app_stimulus_runtime.rs  bridge_command_inbox.rs  broker_h264_runtime.rs  camera_pair.rs  camera_projection_flow.rs  camera_texture_path.rs  companion_frontend.rs  frame_orientation.rs  hostess_camera_model.rs  hostess_contracts.rs  live_hand_surface.rs  main.rs  main_tests.rs  makepad_app_live_design.rs  makepad_diagnostics.rs  makepad_effective_settings.rs  makepad_runtime_config.rs  makepad_stereo_camera_panel.rs  manifold_breath_feedback.rs  manifold_bridge_command_subscriber.rs  manifold_pose_publisher.rs  matter_particle_texture.rs  matter_surface_gpu.rs  matter_surface_gpu_promotion.rs  matter_surface_gpu_schedule.rs  matter_surface_runtime.rs  matter_surface_source_selection.rs  matter_surface_uniforms.rs  matter_world_adf_debug.rs  matter_world_particle_billboard.rs  projection_geometry.rs  projection_runtime.rs  projection_settings.rs  projection_target_controls.rs  qcl080_udp_sender.rs  (+15 more)
apps/hostess-t-makepad/src/hostess_camera_model/: camera_basis.rs  homography.rs  projection_footprint.rs  source_selection.rs  timestamp_matching.rs
apps/hostess-t-makepad/src/hostess_contracts/: camera.rs  depth.rs  effect_stack.rs  hand.rs  home.rs  layer.rs  time.rs  (+4 more)
(+335 files in other folders)
